# BAAS

./: .gitignore  CMakeLists.txt  README.md
blas/: CMakeLists.txt  blasone.cpp  spmv.cpp
blas/include/: BlasDemo.hpp  blasone.hpp  spmv.hpp
cmake/: FindAVX.cmake  FindFMA.cmake  FindMETIS.cmake  FindMKL.cmake  FindPAPI.cmake  FindSSE.cmake
merge/: CMakeLists.txt  Coarsen.cpp  IC.cpp  ILU.cpp  LevelMerge.cpp  LevelTask.cpp  SpTRSV.cpp  TimeMeasure.cpp
merge/include/: Coarsen.hpp  IC.hpp  ILU.hpp  LevelMerge.hpp  LevelTask.hpp  Merge.hpp  MergeMarco.hpp  PortableLock.hpp  SpTRSV.hpp  TimeMeasure.hpp
profile/: CMakeLists.txt  papiProfiling.cpp
profile/include/: Profile.hpp  papiProfiling.hpp
script/: cmake.sh  env.sh  make.sh  run_ic.sh  run_iccg.sh  run_ilu.sh  run_trsv.sh  sub_ic.sh  sub_iccg.sh  sub_ilu.sh  sub_trsv.sh
spm/: CMakeLists.txt  COO.cpp  CSC.cpp  CSR.cpp  DAG.cpp  Laplacian.cpp  LevelSet.cpp  Permute.cpp  mmio_highlevel.cpp  spmUtils.cpp
spm/include/: COO.hpp  CSC.hpp  CSR.hpp  DAG.hpp  LevelSet.hpp  Permuate.hpp  SPM.hpp  SparseUtils.hpp  mm_io.h  mmio_highlevel.h  spmUtils.hpp
test/: CMakeLists.txt  FusionDemo.cpp  FusionDemo.hpp  ICRuntime.hpp  ILUDemo.cpp  ILUDemo.hpp  ILURuntime.hpp  Schedule.hpp  SpTRSVRuntime.hpp  SpTRSV_level_merge.cpp  ic0_level_merge.cpp  iccg_level_merge.cpp  ilu0_level_merge.cpp
utils/: MarcoUtils.hpp  MathUtils.hpp  csv_utils.hpp  time_utils.hpp
